# UC3M-NUMERICAL-METHODS-Graded-Practice-2

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  temp.py  temp_test.py  tox.ini  utillog.py
src/: Graded_Practice_Two_Physics_21-22.ipynb
